--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   overflow-x: hidden;
   font-family: "Montserrat", sans-serif;
+  background-color:#f2f2f2!important;
 }
 .search-field {
   border: none;
@@ -19,11 +20,12 @@ body {
   margin: auto;
   margin-top: 50px;
   border-right: none;
+  background-color:#ffffff;
 }
 .search-button {
   padding: 10px 50px;
   border-radius: 25px;
-  margin-left: 20px;
+  margin-left: 25px;
 }
 #all-products {
   display: grid;
@@ -36,8 +38,13 @@ body {
   justify-content: center;
 }
 .single-product {
-  padding: 10px;
+  padding: 30px;
   transition: 0.6s;
+  height: 450px;
+  margin: 25px;
+  background-color:#ffffff;
+  border-radius: 5px;
+  box-shadow: 1px 1px 10px black;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px gray;
@@ -56,6 +63,7 @@ body {
   border-radius: 5px;
   margin-right: 30px;
   position: fixed;
+  background-color:#ffffff;
 }
 .cart-main {
   padding-right: 30px;
