--- a/css/style.css
+++ b/css/style.css
@@ -49,12 +49,15 @@ body {
   justify-content: center;
 }
 .single-product {
-  padding: 30px;
   transition: 0.6s;
-  margin: 25px;
   background-color:#ffffff;
   border-radius: 5px;
+  min-height: 600px;
   box-shadow: 1px 1px 10px black;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
 }
 .single-product:hover {
   box-shadow: 4px 4px 7px #37d33fc7;
@@ -94,6 +97,11 @@ body {
   width: 50%;
   height: 40px;
   margin: 5px;
+}
+.rating{
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
 }
 .cart {
   width: 350px;
